--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,12 @@
+body{
+    background-color: black;
+}
 canvas{
     padding-left: 0;
     padding-right: 0;
-    margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 350px;
+    width: 1500px;
 }
 button{
     padding-left: 0;
