--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ button{
     padding-left: 0;
     padding-right: 0;
     margin-left: auto;
-    margin-right: 1035px;
+    margin-right: 960px;
     display: none;
     z-index: -2;
     width: 200px;
@@ -69,6 +69,7 @@ button{
     border: solid 4px white;
     width: 90px;
     height: 500px;
+    background: red;
 }
 #speedCounter{
     display: block;
@@ -81,6 +82,7 @@ button{
     width: 90px;
     height: 500px;
     border: solid 4px white;
+    background: linear-gradient(to bottom, #bf0303 1%,#eda704 44%,#0c6000 100%);
 }
 #loadScreen{
     width : 100%;
@@ -100,4 +102,16 @@ button{
     display: block;
     position: relative;
     text-align: center;
+}
+
+#speedCounterLevel{
+    width: 100%;
+    height: 10%;
+    background-color: black;
+}
+
+#fuelCounterLevel{
+    width: 100%;
+    height: 0px;
+    background-color: black;
 }
